Topbar now sticky, fixed white space when scrolling

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,10 @@
 #globalwrapper {
-    background-color: rgb(25, 25, 25);
-    height: 100%;
+    background: rgb(25, 25, 25);
+    min-height: 100%;
 }
 
 .toolbar {
-    position: static;
+    position: fixed;
     width: 100%;
     height: 13%;
     min-height: 100px;
@@ -109,8 +109,12 @@ background-color: rgb(41, 41, 41);
 
 #content-section {
     position: static;
+    padding-top: 9%;
     width: 100%;
     height: 87%;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
 }
 
 
